--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,13 +12,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Login Dockerhub
       env:
         DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
     - name: Build the Docker Image
-      run: docker build -t cicd-pipeline .
-    - name: Push to Docker
+      run: docker build -t youngprinnce/cicd-pipeline .
+
+    - name: Push to DockerHub
       run: docker push youngprinnce/cicd-pipeline
