--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
   
 jobs:
 
-  build:
+  deploy:
 
     runs-on: self-hosted
 
@@ -16,8 +16,10 @@ jobs:
     - name: Pull Docker Image
       run: sudo docker pull youngprinnce/cicd-pipeline:latest
 
-    - name: Delete Docker Container
-      run: sudo docker rm -f cicd-pipeline || true
+    - name: Stop and Remove Old Docker Container
+      run: |
+        sudo docker stop cicd-pipeline || true
+        sudo docker rm cicd-pipeline || true
     
     - name: Run Docker Container
       run: sudo docker run -d -p 8080:8080 --name cicd-pipeline youngprinnce/cicd-pipeline:latest
